samples/_failures_safe/1761151772_9c3302_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d4f2869.c: In function ‘main’:
./samples/SAFE/__tmp_7d4f2869.c:154:32: error: expected ‘)’ at end of input
  154 |         buffer_free(&compressed
      |                    ~           ^
      |                                )
./samples/SAFE/__tmp_7d4f2869.c:154:9: error: expected declaration or statement at end of input
  154 |         buffer_free(&compressed
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_7d4f2869.c:154:9: error: expected declaration or statement at end of input
